# dbt_vendas_az

./: .gitignore  .user.yml  README.md  profiles.yml  pyproject.toml
src/: carga_duckdb.py
vendas/: dbt_project.yml
vendas/macros/: generate_schema_name.sql
vendas/models/marts/: __models.yml  dim_lojas.sql  dim_produtos.sql  dim_usuarios.sql  fato_vendas.sql
vendas/models/staging/: __sources.yml
vendas/models/staging/vendas/: __models.yml  __sources.yml  stg_vendas__itens_venda.sql  stg_vendas__localidades.sql  stg_vendas__lojas.sql  stg_vendas__marcas.sql  stg_vendas__produtos.sql  stg_vendas__usuarios.sql  stg_vendas__vendas.sql
vendas/snapshots/: snap_dim_lojas.sql  snap_dim_lojas.yml  snap_dim_usuarios.sql  snap_dim_usuarios.yml
