[tool.poetry]
name = "dbt-vendas-az"
version = "0.1.0"
description = ""
authors = ["Mairon.az <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-postgres = "^1.9.0"
duckdb = "^1.1.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
sqlfluff-templater-dbt = "^3.3.0"
sqlfluff = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
